# aoc25

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: main.yaml
src/aoc25/: __init__.py  core.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
test_data/: 02.txt  05.txt
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py
