[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc25"
version = "0.0.1"
authors = [{ name = "Xiyao Zhuang" }]
readme = "README.md"
requires-python = ">= 3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = ["pre-commit==4.5.0", "pytest==9.0.1"]
